# dish-booking-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  agent.py  docker-compose.yml  example.env  mcp_config.example.json  pyproject.toml
.cursor/rules/: code-quality-practices.mdc  docstring-standards.mdc  pr-and-review-practices.mdc  python-coding-standards.mdc  python-package-development.mdc
backend/: .pre-commit-config.yaml  agent_config.yaml  example.env  mcp_config.json  pyproject.toml
backend/notebooks/: user_db_crud_walkthrough.ipynb
backend/src/: __init__.py  agent.py  api.py  api_test.ipynb  google_oauth.py  mcp_loader.py
backend/src/agent/: __init__.py  config.py  core.py  hooks.py  prompts.py  streaming.py  types.py
backend/src/keycloak/: docker-compose.yml  keycloak.env.example  keycloak_auth.py
backend/src/keycloak/realm-import/: dish-booking-agent-realm.json
backend/src/mcp/: __init__.py  formatting.py
backend/src/user_db/: README.md  __init__.py  auth.py  docker-compose.yml  init_db.py  models.py  secrets.py  user_db.py  user_db_utilities.py
backend/tests/: __init__.py
backend/tests/agent/: conftest.py  test_config.py  test_hooks.py  test_prompts.py  test_streaming.py  test_types.py
backend/tests/keycloak/: __init__.py  conftest.py  test_keycloak_auth.py
backend/tests/mcp/: __init__.py  conftest.py  test_formatting.py  test_loader.py
backend/tests/user_db/: __init__.py  conftest.py  test_models.py  test_secrets.py  test_user_db.py  test_user_db_utilities.py
credential-cli/: .gitignore  README.md  pyproject.toml
credential-cli/src/dish_credential_setup/: __init__.py  cli.py  credentials.py
frontend/: .env copy.example  .gitignore  README.md  app.html  next.config.mjs  package.json  tailwind.config.mjs  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/api/backend/send-message/: route.ts
frontend/app/auth/: page.tsx
frontend/app/auth/google/callback/: page.tsx
frontend/app/booking/: booking.css
frontend/app/messages/: page.tsx
frontend/app/settings/: page.tsx  settings.css
frontend/components/: ActivityIndicator.tsx  AuthControls.tsx  ChatInput.js  ChatInput.tsx  Message.tsx
frontend/public/: silent-check-sso.html
next-starter/: package.json
next-starter/.next/: build-manifest.json
next-starter/.next/server/: middleware-build-manifest.js  server-reference-manifest.js  server-reference-manifest.json
next-starter/app/: layout.js  layout.tsx  page.js  page.tsx
next-starter/app/booking/: page.js  page.tsx
next-starter/components/: ChatInput.tsx  Message.js  Message.tsx  PageTransition.tsx
src/: agent.py  api.py  mcp_formatting.py
