[project]
name = "dish-credential-setup"
version = "0.1.0"
description = "CLI tool to retrieve Dish booking credentials"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fuzzy Labs" }]
keywords = ["dish", "booking", "credentials", "cli"]

dependencies = [
    "playwright>=1.40.0",
    "rich>=13.0.0",
]

[project.scripts]
dish-setup = "dish_credential_setup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dish_credential_setup"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
